@@ -26,50 +26,6 @@
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-/*
-    Private extensions to the WebPlugin interface.  A plugin may implement these methods 
-    to receive loading callbacks for its main resource.  Plug-ins that implement this SPI
-    show better loading progress in the browser, can be saved to disk, and are
-    more efficient by avoiding making duplicate GET or POST requests for the plug-in's main
-    resource.
-*/
-
 @interface NSObject (WebPlugInPrivate)
-
-/*!
-    @method webPlugInMainResourceDidReceiveResponse:
-    @abstract Called on the plug-in when WebKit receives -connection:didReceiveResponse:
-    for the plug-in's main resource.
-    @discussion This method is only sent to the plug-in if the
-    WebPlugInShouldLoadMainResourceKey argument passed to the plug-in was NO.
-*/
-- (void)webPlugInMainResourceDidReceiveResponse:(NSURLResponse *)response;
-
-/*!
-    @method webPlugInMainResourceDidReceiveData:
-    @abstract Called on the plug-in when WebKit recieves -connection:didReceiveData:
-    for the plug-in's main resource.
-    @discussion This method is only sent to the plug-in if the
-    WebPlugInShouldLoadMainResourceKey argument passed to the plug-in was NO.
-*/
-- (void)webPlugInMainResourceDidReceiveData:(NSData *)data;
-
-/*!
-    @method webPlugInMainResourceDidFailWithError:
-    @abstract Called on the plug-in when WebKit receives -connection:didFailWithError:
-    for the plug-in's main resource.
-    @discussion This method is only sent to the plug-in if the
-    WebPlugInShouldLoadMainResourceKey argument passed to the plug-in was NO.
-*/
-- (void)webPlugInMainResourceDidFailWithError:(NSError *)error;
-
-/*!
-    @method webPlugInMainResourceDidFinishLoading
-    @abstract Called on the plug-in when WebKit receives -connectionDidFinishLoading:
-    for the plug-in's main resource.
-    @discussion This method is only sent to the plug-in if the
-    WebPlugInShouldLoadMainResourceKey argument passed to the plug-in was NO.
-*/
-- (void)webPlugInMainResourceDidFinishLoading;
 
 @end
